@@ -12,27 +12,6 @@ trait HttpMessageProxy extends HttpMessage with Proxy {
   def getHttpMessage(): HttpMessage = httpMessage
   def self = httpMessage
 
-  @deprecated("deprecated in netty", "6.8.0")
-  def getHeader(name: String): String                 = httpMessage.getHeader(name)
-  @deprecated("deprecated in netty", "6.8.0")
-  def getHeaders(name: String): JList[String]         = httpMessage.getHeaders(name)
-  @deprecated("deprecated in netty", "6.8.0")
-  def getHeaders(): JList[JMap.Entry[String, String]] = httpMessage.getHeaders()
-  @deprecated("deprecated in netty", "6.8.0")
-  def containsHeader(name: String): Boolean           = httpMessage.containsHeader(name)
-  @deprecated("deprecated in netty", "6.8.0")
-  def getHeaderNames(): JSet[String]                  = httpMessage.getHeaderNames()
-  @deprecated("deprecated in netty", "6.8.0")
-  def addHeader(name: String, value: Object)          { httpMessage.addHeader(name, value) }
-  @deprecated("deprecated in netty", "6.8.0")
-  def setHeader(name: String, value: Object)          { httpMessage.setHeader(name, value) }
-  @deprecated("deprecated in netty", "6.8.0")
-  def setHeader(name: String, values: JIterable[_])   { httpMessage.setHeader(name, values) }
-  @deprecated("deprecated in netty", "6.8.0")
-  def removeHeader(name: String)                      { httpMessage.removeHeader(name) }
-  @deprecated("deprecated in netty", "6.8.0")
-  def clearHeaders()                                  { httpMessage.clearHeaders() }
-
   def getProtocolVersion(): HttpVersion        = httpMessage.getProtocolVersion()
   def setProtocolVersion(version: HttpVersion) { httpMessage.setProtocolVersion(version) }
 
